recursion.lessons.recursion.tree.Tree.scala.error
Tree:6: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var xn:Int
    ^Tree:7: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var yn:Int
    ^Tree:10: error: type mismatch;
 found   : Double
 required: Int
xn=getX()
       ^Tree:11: error: type mismatch;
 found   : Double
 required: Int
yn=getY()
       ^Tree:17: error: not found: value x
setPos(x,y)
       ^Tree:21: error: not found: value x0
setPos(x0,y0)
       ^