recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
var s= steps
var l=length
var n=0
var xn:Int
var yn:Int

current(s)
xn=getX()
yn=getY()
avance(l)
n=n+1
current(s-1)
droite(angle)
avance(l*shrink)
setPos(x,y)
gauche(angle)
gauche(angle)
avance(l*shrink)
setPos(x0,y0)
//tree(s-1,l,angle,shrink)
}
